--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -40,8 +40,7 @@ jobs:
       - name: Push generated files to `output` branch
         uses: ad-m/github-push-action@v0.6.0
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: output
-          folder: dist
+          directory: dist
           force: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
