--- a/.github/workflows/profile-summary-cards.yml
+++ b/.github/workflows/profile-summary-cards.yml
@@ -1,9 +1,9 @@
 name: GitHub-Profile-Summary-Cards
 
 on:
-  schedule: # S'exécute toutes les 24h
+  schedule:
     - cron: "0 0 * * *"
-  workflow_dispatch: # Permet de le lancer manuellement
+  workflow_dispatch:
 
 jobs:
   build:
@@ -17,4 +17,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           username: ${{ github.repository_owner }}
-          theme: aura # C'est ici que tu choisis le thème (aura, dracula, etc.)
+          # Supprime la ligne 'theme: aura' ici si elle cause toujours une erreur
