update generate file 2

--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -14,6 +14,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      # ÉTAPE CRUCIALE : Configurer Git pour éviter l'erreur 128
+      - name: Configure Git
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global --add safe.directory /github/workspace
+
       # Animation Serpent (Pacman)
       - name: generate-snake-game-from-github-contribution-grid
         uses: Platane/snk@v3
@@ -26,14 +33,14 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # Cartes de Statistiques (On désactive l'auto-push pour éviter l'erreur 128)
+      # Cartes de Statistiques
       - name: generate-profile-summary-cards
         uses: vn7n24fzkq/github-profile-summary-cards@release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           username: ${{ github.repository_owner }}
-          AUTO_PUSH: false
+          AUTO_PUSH: false # On désactive l'auto-push interne qui cause l'erreur
 
       # On déplace les cartes de stats vers le dossier de déploiement
       - name: move stats cards to dist
@@ -41,7 +48,7 @@ jobs:
           mkdir -p dist/profile-summary-card-output
           cp -r profile-summary-card-output/* dist/profile-summary-card-output/
 
-      # Un seul déploiement propre vers la branche 'output'
+      # Déploiement propre vers la branche 'output'
       - name: push to output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
